# Cmake-Template-

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile  README.md  vcpkg.json
include/MyProject/: myheader.h
src/: header.cpp  main.cpp
tests/: test_main.cpp
